--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^2.4.4",
-    "vue-material": "^1.0.0-beta-5"
+    "vue-material": "^1.0.0-beta-5",
+    "vue-router": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
